<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida_ciudad" />

    <Button
        android:id="@+id/botonMiami"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_miami" />

    <Button
        android:id="@+id/botonCdmx"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_cdmx" />

    <Button
        android:id="@+id/botonMoscu"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_moscu" />
</LinearLayout>