<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="134dp"
        android:text="@string/texto_grados"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/textViewCiudad"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewClima"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="134dp"
        android:layout_marginBottom="51dp"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewClima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="189dp"
        android:text="@string/texto_clima"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="95dp"
        android:text="@string/texto_humedad"
        android:textSize="18sp" />
</RelativeLayout>